# code-notes

./: .gitignore  LICENSE  README.md
docker/: use_poetry.dockerfile  use_private_python_package.dockerfile  use_ssh_key.docker-compose.yaml
github/actions/: deploy_to_ecs.yaml  use_ssh_key.yaml
linux/: install_poetry.sh  install_pyenv.sh  set_git.sh
python/: pyproject.toml
python/aws/: cognito.py
python/common/alembic/: env.py
python/common/poetry/: use_git_package.pyproject.toml
python/common/ruff/: ruff.toml
python/dev/alembic/: env.py
python/dev/alembic/utils/: create_revision.sh
python/dev/poetry/: not_package.pyproject.toml  use_dev.pyproject.toml
python/dev/ruff/: ruff.toml
python/document_tool/converter/: docx_to_pdf.py
python/document_tool/docx/: docx_template.py
python/document_tool/excel/: named_style.py  others.py  simple_write.py
python/document_tool/pdf/: hidden_data.py  metadata.py  watermark.py
python/fastapi/config/: log.py
python/fastapi/decorators/: limiter.py  marking.py  permission.py
python/fastapi/dependencies/: db.py  http.py
python/fastapi/dependencies/security/: api_key.py  cognito.py  union.py
python/fastapi/examples/: api_docs.py  api_filtering.py  api_response.py  fast_api_cache.py  page_nation.py  rate_limit.py  use_middleware.py
python/fastapi/filters/: add_descriptions.py  value_has_comma.py
python/fastapi/structures/default_app/: main.py
python/fastapi/structures/default_app/api/: __init__.py  routers.py
python/fastapi/structures/default_app/api/v1/: routers.py
python/fastapi/structures/default_app/core/constants/: __init__.py
python/fastapi/structures/default_app/core/decorators/: __init__.py
python/fastapi/structures/default_app/core/dependencies/: __init__.py
python/fastapi/structures/default_app/db/: __init__.py
python/fastapi/structures/default_app/schemas/: __init__.py
python/fastapi/structures/default_app/services/: __init__.py
python/pydantic/: base_class.py  pagenator.py
python/sqlmodel/: session.py  simple_query.py  table.py  view.py
